--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="/static/styles/styles.css">
 </head>
+<body id="body">
 
 <h1 class="header">My Pets</h1>
 
@@ -18,6 +19,16 @@
 </form>
 
 <a href="/pets">Pets List</a>
+<br>
+<br>
+Change text color:
+<br>
+<input id="textColor" />
+<button id="changeColor">Change Color</button>
+<br>
+<br>
+Click me at your own risk!!!<button id="hidePage">I dare you</button>
+
 
 <p>Apply to our full-time and part-time courses to take accelerate your education.</p>
 <p>Our courses teach you the skills you need to take the next step in becoming a software engineer.</p>
@@ -27,4 +38,4 @@ Learn more <a href="https://www.lambdaschool.com">here.</a>
 
 <script src="/static/scripts/home.js"></script>
 
-
+</body>
